--- a/code/work/20210616-OPT1/c_grid_study0/UTC-20210619-074952/index.html
+++ b/code/work/20210616-OPT1/c_grid_study0/UTC-20210619-074952/index.html
@@ -11,7 +11,7 @@ thead input {{ width: 50px; }}
 </style>
 </head><body>
 <p>
-For an exact-match column search use regex, e.g.: ^100$
+For an exact-match column search use regex, e.g. <b>^100$</b> or <b>10|20</b>
 </p>
 
 <table border="1" class="dataframe display" id="data">
