--- a/code/work/20210616-OPT1/c_grid_study0/UTC-20210619-074952/index.html
+++ b/code/work/20210616-OPT1/c_grid_study0/UTC-20210619-074952/index.html
@@ -20,7 +20,7 @@
             <p>Generated
             from <a href="d_postprocess_paramgrid/param_grid.tsv">param_grid.tsv</a>
             by <a href="../../i_index.py">i_index.py</a>
-            on UTC-20210624-191413
+            on UTC-20210626-202914
             </p>
             <table border="1" class="dataframe display" id="data">
   <thead>
@@ -153,7 +153,7 @@
       <td><a href='c_grid_visualize/8/excess_travel_time_hist.png'><img src='c_grid_visualize/8/excess_travel_time_hist.png' height='30px'></a></td>
       <td><a href='c_grid_visualize/8/excess_travel_time_traj.png'><img src='c_grid_visualize/8/excess_travel_time_traj.png' height='30px'></a></td>
       <td><a href='c_grid_visualize/8/vehicle_load.png'><img src='c_grid_visualize/8/vehicle_load.png' height='30px'></a></td>
-      <td>#8: <a href='subcases/8/params.json'>params</a>, <a href='subcases/8/routes.tsv'>routes</a>, <a href='subcases/8/trips.tsv'>trips</a></td>
+      <td>#8: <a href='subcases/8/params.json'>params</a>, <a href='subcases/8/routes.tsv'>routes</a>, <a href='subcases/8/trips.tsv'>trips</a>, <a href='c_grid_visualize/8/visualize3d.html'>visualize3d</a></td>
       <td>--</td>
     </tr>
     <tr>
@@ -166,7 +166,7 @@
       <td><a href='c_grid_visualize/9/excess_travel_time_hist.png'><img src='c_grid_visualize/9/excess_travel_time_hist.png' height='30px'></a></td>
       <td><a href='c_grid_visualize/9/excess_travel_time_traj.png'><img src='c_grid_visualize/9/excess_travel_time_traj.png' height='30px'></a></td>
       <td><a href='c_grid_visualize/9/vehicle_load.png'><img src='c_grid_visualize/9/vehicle_load.png' height='30px'></a></td>
-      <td>#9: <a href='subcases/9/params.json'>params</a>, <a href='subcases/9/routes.tsv'>routes</a>, <a href='subcases/9/trips.tsv'>trips</a></td>
+      <td>#9: <a href='subcases/9/params.json'>params</a>, <a href='subcases/9/routes.tsv'>routes</a>, <a href='subcases/9/trips.tsv'>trips</a>, <a href='c_grid_visualize/9/visualize3d.html'>visualize3d</a></td>
       <td>--</td>
     </tr>
     <tr>
